feat(workflows): add detailed summary JSON outputs for tag operations

--- a/.github/actions/git/steps/update-major-version-tags/action.yml
+++ b/.github/actions/git/steps/update-major-version-tags/action.yml
@@ -39,6 +39,9 @@ outputs:
   updated:
     description: "Whether tags were successfully updated"
     value: ${{ steps.update.outputs.updated }}
+  summary_json:
+    description: "Complete summary JSON with title, description, and detailed results"
+    value: ${{ steps.update.outputs.summary-json }}
 
 runs:
   using: "composite"
@@ -54,6 +57,7 @@ runs:
         if [[ ! $TAG_NAME =~ ^v([0-9]+)\.([0-9]+)\.([0-9]+)$ ]]; then
           echo "Tag $TAG_NAME is not a semantic version tag, skipping"
           echo "updated=false" >> $GITHUB_OUTPUT
+          echo 'summary-json={"major_minor_updates":{"title":"📌 Version Tags Updated","description":"No major/minor version tags updated - not a semantic version tag","updated":false,"lines":[],"stats_template":"📌 Major/minor tag updates: {count}"}}' >> $GITHUB_OUTPUT
           exit 0
         fi
 
@@ -84,6 +88,10 @@ runs:
         echo "major-version=$MAJOR_VERSION" >> $GITHUB_OUTPUT
         echo "minor-version=$MINOR_VERSION" >> $GITHUB_OUTPUT
         echo "updated=true" >> $GITHUB_OUTPUT
+        
+        # Create summary JSON with title, description, and pre-formatted lines
+        SUMMARY_JSON='{"major_minor_updates":{"title":"📌 Version Tags Updated","description":"The following major/minor version tags have been updated:","updated":true,"lines":["- **'"$MAJOR_VERSION"'** → **'"$TAG_NAME"'**","- **'"$MINOR_VERSION"'** → **'"$TAG_NAME"'**"],"stats_template":"📌 Major/minor tag updates: {count}","notes":["Workflows can reference major version tags (e.g., `@'"$MAJOR_VERSION"'`) for automatic updates."]}}'
+        echo "summary-json=$SUMMARY_JSON" >> $GITHUB_OUTPUT
 
     - name: Update tags with proper signing
       if: ${{ steps.update.outputs.updated == 'true' }}
