refactor(workflows): simplify concurrency group for tag health jobs

--- a/.github/workflows/reusable-tag-health.yml
+++ b/.github/workflows/reusable-tag-health.yml
@@ -3,7 +3,7 @@ name: 🏷️ Tag Health Management Jobs
 
 # Concurrency control: Cancel previous runs when new ones start
 concurrency:
-  group: tag-health-${{ github.repository }}-${{ github.ref }}
+  group: tag-health-${{ github.repository }}
   cancel-in-progress: true
 
 on:
