--- a/.github/actions/npm/steps/create-package-files/action.yml
+++ b/.github/actions/npm/steps/create-package-files/action.yml
@@ -40,10 +40,25 @@ runs:
         else
           # Fallback: extract from .tgz file
           echo "📦 Extracting from .tgz file as fallback..."
-          TGZ_FILE=$(find . -name "${{ inputs.package-path }}" -type f | head -1)
+          
+          # Try multiple patterns to find the .tgz file
+          TGZ_FILE=""
+          for pattern in "${{ inputs.package-path }}" "./artifacts/*.tgz" "./*.tgz" "*.tgz"; do
+            TGZ_FILE=$(find . -name "$pattern" -type f | head -1)
+            if [ -n "$TGZ_FILE" ]; then
+              echo "📦 Found .tgz file with pattern '$pattern': $TGZ_FILE"
+              break
+            fi
+          done
 
           if [ -z "$TGZ_FILE" ]; then
-            echo "❌ No .tgz file found matching pattern: ${{ inputs.package-path }}"
+            echo "❌ No .tgz file found. Tried patterns:"
+            echo "  - ${{ inputs.package-path }}"
+            echo "  - ./artifacts/*.tgz"
+            echo "  - ./*.tgz"
+            echo "  - *.tgz"
+            echo "Available files:"
+            find . -name "*.tgz" -type f 2>/dev/null || echo "  No .tgz files found"
             exit 1
           fi
 
